Colaboratory를 통해 생성됨

--- a/python01.ipynb
+++ b/python01.ipynb
@@ -122,6 +122,40 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QNENb3NNUOLy"
+      },
+      "source": [
+        "x=10"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wheq2quDUalO",
+        "outputId": "c1c7a034-f75b-4e9a-ca27-f46215ef6b3e"
+      },
+      "source": [
+        "print(x)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "6N1gGIhVC-__"
@@ -135,17 +169,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R4zETtllGaBS"
+        "id": "R4zETtllGaBS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "13858d23-d559-480b-d737-37f371680c92"
       },
       "source": [
         "x = 10\n",
         "y = 20.5\n",
         "b = True \n",
         "s = 'Hello Python!'\n",
-        " "
+        "print(x,type(x), y,type(y),b,type(b),s,type(s))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 <class 'int'> 20.5 <class 'float'> True <class 'bool'> Hello Python! <class 'str'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -288,16 +334,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bduh4-6GOOWC"
+        "id": "Bduh4-6GOOWC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c4f25c3-b604-43e1-976b-b268b67630de"
       },
       "source": [
         "#소수정 처리 \n",
         "x = 3.14159\n",
-        "\n",
-        " "
+        "s=f'x={x:2f}'\n",
+        "print(s)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x=3.141590\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -327,14 +385,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5Vlw4Oc-DoNm"
+        "id": "5Vlw4Oc-DoNm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f4be35fd-e259-402a-eb63-7a783b6aba17"
       },
       "source": [
         "#두 정수를 입력받아서 산술연산\n",
-        " "
+        "x=10**3\n",
+        "y=10//3\n",
+        "z=10%3\n",
+        "m=10/3\n",
+        "print(x,y,z,m)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1000 3 1 3.3333333333333335\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -363,26 +437,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2UIKX01cNywh"
+        "id": "2UIKX01cNywh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a45ba174-c9a7-46a4-fdbd-b81f76aa9607"
       },
       "source": [
         "# 정수를 입력받아서 짝수/홀수 구분\n",
-        " "
+        "x=int(input())\n",
+        "if (x%2 ==0):\n",
+        "  print(f'{x}는 짝수')\n",
+        "elif (x%2==1):\n",
+        "  print('{x}는 홀수')\n",
+        "else:\n",
+        "  print('넌 뭐니?')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "0는 짝수\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QpoBs8ucO0hO"
+        "id": "QpoBs8ucO0hO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "55c20ad4-7779-4cf5-820a-a081fd05eae3"
       },
       "source": [
         "# 성적을 입력받아서 70이상이면 Pass, 70점미만 60점이상 재수강, 60점미만 Fail\n",
-        " "
+        "x=float(input())\n",
+        "if x>=70 : print(x, end='->');print('Pass')\n",
+        "elif x>=60 : print(x, end='->');print('재수강')\n",
+        "else : print(x, end='->');print('Fail')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "20\n",
+            "20.0->Fail\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -428,14 +537,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SCXuAE5YWfCh"
+        "id": "SCXuAE5YWfCh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d293fe99-1842-4cae-f75e-4ca9a3005782"
       },
       "source": [
         "# 1에서 50까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
-        "# for문으로 "
+        "# for문으로 \n",
+        "\n",
+        "# 시작값이 없으면 0부터, \n",
+        "for i in range(10) :\n",
+        "  print(f'i={i}',end=',')\n",
+        "\n",
+        "for i in range(1,11,2) :\n",
+        "  print(f'i={i}',end=';')\n",
+        "\n",
+        "for i in range(0,20,2) :\n",
+        "  print(f'i={i}',end='->')\n",
+        "\n",
+        "for i in range(1,11) :\n",
+        "  if i%2==0 : break\n",
+        "  print(f'i={i}')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "i=0,i=1,i=2,i=3,i=4,i=5,i=6,i=7,i=8,i=9,i=1;i=3;i=5;i=7;i=9;i=0->i=2->i=4->i=6->i=8->i=10->i=12->i=14->i=16->i=18->i=1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
